--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -5,3 +5,23 @@
     margin: 0;
     padding: 0;
 }
+
+html{
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
