--- a/Client/src/app/nav/nav.style.scss
+++ b/Client/src/app/nav/nav.style.scss
@@ -2,8 +2,6 @@
     display: none;
 }
 
-
-
 .menu-btn__burger::before, .menu-btn__burger::after{
     content: '';
     position: absolute;
@@ -24,17 +22,12 @@
 }
 
 .menu-btn.open{
-    .menu-btn__burger{
-        transform: translateX(-50px);
-        background-color: transparent;
-    }
-
     .menu-btn__burger::before{
-        transform: rotate(45deg) translate(35px, -35px);
+        transform: rotate(45deg);
     }
 
     .menu-btn__burger::after{
-        transform: rotate(-45deg) translate(35px, 35px);
+        transform: rotate(-45deg);
     }
 }
 
