--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,14 +1,13 @@
 <header [ngClass]="menuOpen ? 'header-dark' : 'header-light'">
-    <a routerLink="#" class="logo">Crypto Training</a>
+    <a (click)="closeMenu()" routerLink="/" class="logo">Crypto Training</a>
     <div class="nav-components">
         <nav>
             <ul class="nav-links">
-                <li><a routerLink="#">Home</a></li>
-                <li><a routerLink="#">Profile</a></li>
+                <li><a routerLink="/">Home</a></li>
                 <li><a routerLink="#">Crypto</a></li>
             </ul>
         </nav>
-        <button class="about" routerLink="#">Contact</button>
+        <button class="account" routerLink="/account">Account</button>
     </div>
     <div #menuBtn [ngClass]="menuOpen ? 'open' : ''" (click)="changeMenu()" class="menu-btn">
         <div class="menu-btn__burger"></div>
@@ -17,8 +16,8 @@
 
 <div class="nav-components-expanded" [ngClass]="menuOpen ? 'expanded-visible' : 'expanded-hidden'">
     <ul class="nav-links-expanded">
-        <li><a routerLink="#">Home</a></li>
-        <li><a routerLink="#">Profile</a></li>
-        <li><a routerLink="#">Crypto</a></li>
+        <li><a (click)="closeMenu()" routerLink="/">Home</a></li>
+        <li><a (click)="closeMenu()" routerLink="#">Crypto</a></li>
+        <li><a (click)="closeMenu()" routerLink="/account">Account</a></li>
     </ul>
 </div>
