--- a/Client/src/app/account/account.component.html
+++ b/Client/src/app/account/account.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="(accountService.currentUser$ | async) != null">
-    <app-profile></app-profile>
+    <app-profile [accountService]="accountService"></app-profile>
 </ng-container>
 <ng-container *ngIf="(accountService.currentUser$ | async) == null">
     <div class="account-main-div">
