--- a/Client/src/app/account/profile/profile.component.html
+++ b/Client/src/app/account/profile/profile.component.html
@@ -1,4 +1,54 @@
-<div>
-    <div></div>
-    <div></div>
+<div class="main-profile-div">
+    <div class="client-info-main-div">
+        <div class="client-info-div card">
+            <div class="client-name-username">
+                <p class="name-p">Kirill Zhurov</p>
+                <p class="username-p">@Killsan</p>
+            </div>
+            <div class="bank-status">
+                <p class="bank-status-title">Bank status:</p>
+                <div>
+                    <p>USD: 2000$</p>
+                    <p>BITCOIN: 3.231241</p>
+                </div>
+            </div>
+            <div class="logout-div">
+                <button class="logout-button btn" (click)="logout()">Logout</button>
+            </div>
+        </div>
+    </div>
+    <div class="bank-account-status-main-div">
+        <div class="transactions card">
+            <p class="last-transactions-p">Your transactions:</p>
+            <div class="table">
+                <div class="table-head">
+                    <div class="table-head-cell">Date</div>
+                    <div class="table-head-cell">Type</div>
+                    <div class="table-head-cell">Amount BTC</div>
+                    <div class="table-head-cell">Price</div>
+                    <div class="table-head-cell">Total</div>
+                </div>
+                <div class="table-body">
+                    <div class="table-row">
+                        <div class="table-cell">23.06.2003</div>
+                        <div class="table-cell">SELL</div>
+                        <div class="table-cell">1.3213124</div>
+                        <div class="table-cell">23000$</div>
+                        <div class="table-cell">24545$</div>
+                    </div>
+            </div>
+        </div>
+        <div class="small-screen-transactions">
+            <p class="last-transactions-p">Your transactions:</p>
+            <details>
+                <summary>23.06.2003</summary>
+                <div>
+                    <p><a class="text-bold">Type:</a> SELL</p>
+                    <p><a class="text-bold">Amount BTC:</a> 1.3213124</p>
+                    <p><a class="text-bold">Price:</a> 23000$</p>
+                    <p><a class="text-bold">Total:</a> 24545$</p>
+                </div>
+            </details>
+        </div>
+    </div>
 </div>
