--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -26,3 +26,58 @@ html{
     background: #555;
 }
 html, body { height: 100%; }
+
+.card{
+    border-radius: 10px;
+    padding: 20px;
+    background: radial-gradient(
+        circle at 10%, 
+        rgb(255, 255, 255), 
+        rgb(239, 239, 239), 
+        rgb(255, 255, 255)
+    );
+    box-shadow: 1px 1px 8px rgba(0,0,0,.5);
+}
+
+.btn{
+    padding: 9px 25px;
+    background-color: rgba(0, 135, 169, 1);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: white;
+    width: 100%;
+    font-size: 2.5vh;
+}
+
+.btn:hover{
+    background-color: rgba(0, 135, 169, .8);
+    color: black;
+}
+
+details {
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    padding: .5em .5em 0;
+    width: 100%;
+}
+
+summary {
+    font-weight: bold;
+    margin: -.5em -.5em 0;
+    padding: .5em;
+}
+
+details[open] {
+    padding: .5em;
+}
+
+details[open] summary {
+    border-bottom: 1px solid #aaa;
+    margin-bottom: .5em;
+}
+
+.text-bold{
+    font-weight: bold;
+}
