--- a/Client/src/app/account/profile/profile.component.html
+++ b/Client/src/app/account/profile/profile.component.html
@@ -8,17 +8,23 @@
             <div class="bank-status">
                 <p class="bank-status-title">Bank status:</p>
                 <div>
-                    <p>USD: 2000$</p>
-                    <p>BITCOIN: 3.231241</p>
+                    <p>USD: {{(accountService.currentUser$ | async).usdAmount}}$</p>
+                    <p>BITCOIN: {{(accountService.currentUser$ | async).btcAmount}}</p>
                 </div>
             </div>
-            <div class="logout-div">
+            <div class="button-div">
+                <button class="replenish-button btn" (click)="replenishUsd()">Get usd</button>
                 <button class="logout-button btn" (click)="logout()">Logout</button>
             </div>
         </div>
     </div>
-    <div class="bank-account-status-main-div">
-        <div class="transactions card">
+
+    <div *ngIf="(clientService.transactions$ | async).length <= 0" class="no-transactions-div card">
+        <p>You didn't do any transactions yet</p>
+    </div>
+    
+    <div class="bank-account-status-main-div" *ngIf="(clientService.transactions$ | async).length > 0">
+        <div class="transactions card" id="transactions-div">
             <p class="last-transactions-p">Your transactions:</p>
             <div class="table">
                 <div class="table-head">
@@ -28,27 +34,36 @@
                     <div class="table-head-cell">Price</div>
                     <div class="table-head-cell">Total</div>
                 </div>
-                <div class="table-body">
-                    <div class="table-row">
-                        <div class="table-cell">23.06.2003</div>
-                        <div class="table-cell">SELL</div>
-                        <div class="table-cell">1.3213124</div>
-                        <div class="table-cell">23000$</div>
-                        <div class="table-cell">24545$</div>
+                <div class="table-body" #scrollMe id="scrollMe"
+                [scrollTop]="scrollMe.scrollHeight">
+                    <div *ngFor="let transaction of (clientService.transactions$ | async); let lastcall = last">
+                        <div class="table-row">
+                            <div class="table-cell">{{transaction.transactionDate | date: "dd/MM/yyyy"}}</div>
+                            <div class="table-cell">{{transaction.type}}</div>
+                            <div class="table-cell">{{transaction.amount}}</div>
+                            <div class="table-cell">{{transaction.btcPrice}}$</div>
+                            <div class="table-cell">{{transaction.btcPrice*transaction.amount}}$</div>
+                            <span>{{scrollToBottom(lastcall)}}</span>
+                        </div>
                     </div>
             </div>
         </div>
-        <div class="small-screen-transactions">
-            <p class="last-transactions-p">Your transactions:</p>
-            <details>
-                <summary>23.06.2003</summary>
+        <div class="small-screen-transactions" #scrollMeMobile
+        [scrollTop]="scrollMeMobile.scrollHeight">
+            <details *ngFor="let transaction of (clientService.transactions$ | async); let lastcallMobile = last">
+                <summary>{{transaction.transactionDate | date: "dd/MM/yyyy"}}</summary>
                 <div>
-                    <p><a class="text-bold">Type:</a> SELL</p>
-                    <p><a class="text-bold">Amount BTC:</a> 1.3213124</p>
-                    <p><a class="text-bold">Price:</a> 23000$</p>
-                    <p><a class="text-bold">Total:</a> 24545$</p>
+                    <p><a class="text-bold">Type:</a> {{transaction.type}}</p>
+                    <p><a class="text-bold">Amount BTC:</a> {{transaction.amount}}</p>
+                    <p><a class="text-bold">Price:</a> {{transaction.btcPrice}}</p>
+                    <p><a class="text-bold">Total:</a> {{transaction.btcPrice*transaction.amount}}</p>
                 </div>
+                <span>{{scrollToBottomMobile(lastcallMobile)}}</span>
             </details>
+        </div>
+
+        <div class="show-more-div">
+            <button (click)="loadMore()">Show more</button>
         </div>
     </div>
 </div>
