--- a/Client/src/app/account/profile/profile.component.scss
+++ b/Client/src/app/account/profile/profile.component.scss
@@ -5,7 +5,7 @@
     .table-head{
         padding: 5px 0;
         margin: 5px 0;
-        border-radius: 20px;
+        border-radius: 10px;
         display: flex;
         justify-content: space-between;
         background-color: black;
@@ -25,7 +25,7 @@
         .table-row{
             display: flex;
             justify-content: space-between;
-            border-bottom: 1px solid gray;
+            border-bottom: 1px solid rgb(225, 225, 225);
             padding-top: 10px;
             padding-bottom: 3px;
             .table-cell{
@@ -36,7 +36,23 @@
             }
         }
     }
-}  
+}
+
+.button-div{
+    display: flex;
+    justify-content: space-between;
+    button{
+        height: 20%;
+        width: 45%;
+    }
+}
+
+.no-transactions-div{
+    display: flex;
+    justify-content: center;
+    width: 60%;
+    align-items: center;
+}
 
 .main-profile-div{
     display: flex;
@@ -70,8 +86,17 @@
                     }
                 }
             }
-            .logout-div{
+            .button-div{
                 padding-top: 20px;
+                *{
+                    font-size: 2.2vh;
+                }
+                .replenish-button{
+                    width: 56%;
+                }
+                .logout-button{
+                    width: 40%;
+                }
             }
         }
     }
@@ -83,6 +108,17 @@
     }
 }
 
+.show-more-div{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    button{
+        border: 0;
+        font-size: 2vh;
+        color: gray;
+    }
+}
+
 
 @media screen and (max-width: 933px){
     .main-profile-div{
@@ -90,6 +126,10 @@
         .client-info-main-div{
             width: 90%;
             margin: 20px, 0;
+        }
+        .no-transactions-div{
+            width: 90%;
+            margin: 30px 0px;
         }
         .bank-account-status-main-div{
             width: 90%;
@@ -102,17 +142,21 @@
     .main-profile-div{
         flex-direction: column;
         width: 100%;
-        padding: 0;
+        padding: 20px 0;
+        *{
+            border-radius: 0;
+        }
         .client-info-main-div{
             width: 100%;
             margin: 20px, 0;
         }
+        .no-transactions-div{
+            width: 100%;
+            margin: 30px 0px;
+        }
         .bank-account-status-main-div{
             width: 100%;
             margin: 20px 0;
-            .transactions{
-                display: none;
-            }
             .small-screen-transactions{
                 display: flex;
                 flex-direction: column;
@@ -124,6 +168,10 @@
                     margin-top: 20px;
                 }
             }
+            .table{
+                display: none;
+            }
+
         }
     } 
 }
