--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -6,10 +6,6 @@
     padding: 0;
 }
 
-html{
-    overflow-x: hidden;
-}
-
 ::-webkit-scrollbar {
     width: 10px;
 }
@@ -25,7 +21,26 @@ html{
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
-html, body { height: 100%; }
+
+// html, body { 
+//     height: 100%; 
+//     overflow-x: hidden;
+// }
+
+html {
+    position: fixed;
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
+    margin: 0;
+    width: 100vw; 
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+}
 
 .card{
     border-radius: 10px;
