--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-nav></app-nav>
 
-<div><router-outlet></router-outlet></div>
+<div class="main-container"><router-outlet></router-outlet></div>
