--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -45,12 +45,12 @@ body {
 .card{
     border-radius: 10px;
     padding: 20px;
-    background: radial-gradient(
-        circle at 10%, 
-        rgb(255, 255, 255), 
-        rgb(239, 239, 239), 
-        rgb(255, 255, 255)
-    );
+    // background: radial-gradient(
+    //     circle at 10%, 
+    //     rgb(255, 255, 255), 
+    //     rgb(230, 230, 230), 
+    //     rgb(255, 255, 255)
+    // );
     box-shadow: 1px 1px 8px rgba(0,0,0,.5);
 }
 
