added base BTC chart

--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
         <nav>
             <ul class="nav-links">
                 <li><a routerLink="/">Home</a></li>
-                <li><a routerLink="#">Crypto</a></li>
+                <li><a routerLink="crypto">Crypto</a></li>
             </ul>
         </nav>
         <button class="account" routerLink="/account">Account</button>
