added crypto url to nav bar

--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -17,7 +17,7 @@
 <div class="nav-components-expanded" [ngClass]="menuOpen ? 'expanded-visible' : 'expanded-hidden'">
     <ul class="nav-links-expanded">
         <li><a (click)="closeMenu()" routerLink="/">Home</a></li>
-        <li><a (click)="closeMenu()" routerLink="#">Crypto</a></li>
+        <li><a (click)="closeMenu()" routerLink="/crypto">Crypto</a></li>
         <li><a (click)="closeMenu()" routerLink="/account">Account</a></li>
     </ul>
 </div>
