--- a/Client/src/app/nav/nav.component.scss
+++ b/Client/src/app/nav/nav.component.scss
@@ -114,6 +114,14 @@ header{
     transition: all .5s ease-in-out;
 }
 
+.loading-container{
+    z-index: 2;
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    margin-top: 97.5px;
+}
+
 @media screen and (max-width: 1000px){
     .nav-components{
         display: none;
@@ -122,17 +130,14 @@ header{
         height: 80px;
         box-shadow: 0px 1px 5px rgba(0,0,0,.4);
     }
+
+    .loading-container{
+        margin-top: 80px;
+    }
 }
 
 @media screen and (min-width: 1000px){
     .nav-components-expanded{
         display: none;
     }
-}
-
-.loading-container{
-    z-index: 2;
-    position: absolute;
-    width: 100%;
-    height: 20px;
 }
